refactor: Use Objects.requireNonNull for null checks in various classes